<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FindItNow</string>
    <string name="my_location">My Location</string>
    <string name="add_new">Add New Item</string>
    <string name="help">Help</string>
	<string name="help_questions">&quot;&lt;b&gt;How do I find an item?&lt;/b&gt;&lt;br /&gt;Start on the Categories tab on the Home screen.  Select a category button (you may be prompted to select a secondary item type), and the map will launch.  The map icons represent the multiple locations where the items can be found.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;How do I view more details about an item?&lt;/b&gt;&lt;br /&gt;Just tap an icon that appears on the map to bring up the Details popup.  From here, you can see on which floor(s) the item is located, the distance to the location, and more.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;How do I add an item?&lt;/b&gt;&lt;br/&gt;If you're an approved Super User and have logged in, open the Add Item screen from the Options menu.  Select whether the item or service is indoors or outdoors, and choose a category type.  Click Next.&lt;br/&gt;&lt;br/&gt;If your item is indoors, you'll also need to indicate which building and floor the item is located on.  If your item is outdoors, the map will launch and you'll be able to tap the map to indicate the location.&lt;br/&gt;&lt;br/&gt;A successful submission will be indicated on the screen.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;The Details popup seems to be missing several floors.  Is the floorplan for this building incomplete?&lt;/b&gt;&lt;br/&gt;If you're searching by category, the popup will only show floors that currently house items of that category.  If you wish to view all floors for a building, return to the Home screen, switch to the Buildings tab, and search by building name instead.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;I'm at the location on the map, but there's nothing here.  What happened?&lt;/b&gt;&lt;br/&gt;It's possible this particular location was submitted in error.  If you believe this location actually does not exist (after a thorough inspection of the area), you are encouraged to report this location as not found.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;I added an item, but no longer see it on the map.  Why is it gone?&lt;/b&gt;&lt;br /&gt;If other users believe your item location is marked incorrectly, or does not actually exist, they can report it as not found.&lt;br/&gt;&lt;br/&gt;When enough users have reported your item location as not found, FIN will no longer keep this location in the database.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Can I search for a certain name of a location?&lt;/b&gt;&lt;br/&gt;Yes.  From the Categories tab on the Home screen, select a category, and the map will launch.  From here, click the Search button on your phone and enter your search phrase.  A list of results will appear.  Clicking any result will center the map on that particular location.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Can I submit an issue or feedback about FindItNow?&lt;/b&gt;&lt;br/&gt;We definitely appreciate feedback of any kind.  Visit our Google Code project site (link located at the bottom of this page), and file your issue or feedback under Issues.&quot;</string>
	<string name="help_troubleshooting">&quot;&lt;b&gt;Location detection seems off&lt;/b&gt;&lt;br/&gt;You may be in an area with poor WiFi coverage.  For best results, try launching the map within a WiFi hotspot, like inside a building.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;The FIN application is freezing&lt;/b&gt;&lt;br/&gt;You may have lost internet connection while using FIN. Check your settings on your Android phone to make sure you are still connected.&quot;</string>
	<string name="help_disclaimers">&lt;b&gt;Accuracy&lt;/b&gt;&lt;br/&gt;FIN does not guarantee that all locations on the map exist or contain accurate information.  For example, mailbox pickup times or coffee stand hours are subject to change and may depend on classes being in session.  Certain buildings may be inaccessible due to ongoing construction.  Distances to locations and walking times are purely estimates.&lt;br/&gt;&lt;br/&gt;If you encounter an incorrectly marked or missing location, we encourage you to report the location as not found, in our effort to keep the database as current and accurate as possible.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Exclusion of certain item locations and services&lt;/b&gt;&lt;br/&gt;FIN has purposely excluded certain items and services (such as private restrooms) that are inaccessible to the general public.  We do not recommend submitting these locations to the database.</string>
	<string name="help_about">FindItNow 1.1, GNU GPL v3&lt;br/&gt;&lt;br/&gt;FindItNow is an Android application developed for a software engineering project at the University of Washington.&lt;br/&gt;&lt;br/&gt;Contributors: Dustin Abramson, Mai Dang, Michael Falcone, Eric Hare, Chanel Huang, Jillyn Johnson, Jared Jones, and Spencer Thomas.&lt;br/&gt;&lt;br/&gt;Visit our project site to learn more at:</string>
	<string name="spinner_category">Select Category</string>
	<string name="spinner_building">Select Building</string>
	<string name="spinner_floor">Select Floor</string>
	<string-array name="school_supplies_items">
        <item>Blue Books</item>
        <item>Scantrons</item>
        <item>Printing</item>
    </string-array>
    <string-array name="campuses">
        <item>University of Washington</item>
        <item>Western Washington University</item>
	</string-array>
	<string name="timeout">Error: Could not detect an internet connection.  Please ensure Wifi or 3G is enabled and working</string>
	<string name="settings">Settings</string>
	<string name="home">Home</string>
	<string name="login">SuperUser Login</string>
	<string name="logout">SuperUser Logout</string>
	<string name="login_already">Already logged in</string>
	<string name="login_success">You have logged in</string>
	<string name="logged_out">Logged out.</string>
	<string name="not_logged_in">Not logged in.</string>
	<string name="must_login">"You must login to access this function"</string>
	<string name="superuser_info">Super users are FindItNow power users who contribute by adding new items to the map, and deleting ones that are not found.  If you would like to apply to become a super user, please click the following link:</string>
	<string name="search">"Search"</string>
	<string name="search_hint">"Search locations"</string>
</resources>
