<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
 	<item android:id="@+id/home_button"
          android:icon="@android:drawable/ic_menu_agenda"
          android:title="@string/home" />
    <item android:id="@+id/login_button"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/login" />
    <item android:id="@+id/logout_button"
          android:icon="@android:drawable/ic_menu_info_details"
          android:title="@string/logout" />
    <item android:id="@+id/settings_button"
          android:icon="@android:drawable/ic_menu_preferences"
          android:title="@string/settings" />
    <item android:id="@+id/my_location_button"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/my_location" />
    <item android:id="@+id/add_new_button"
          android:icon="@android:drawable/ic_menu_add"
          android:title="@string/add_new" />
    <item android:id="@+id/help_button"
          android:icon="@android:drawable/ic_menu_help"
          android:title="@string/help" />
</menu>